Use compatibility instead of --release
in studio-agent.