@@ -14,6 +14,9 @@ dependencies {
 }
 
 tasks.compileJava {
+    // Need to set target/source compatibility, since `--add-exports` is not compatible with `--release`.
+    targetCompatibility = "11"
+    sourceCompatibility = "11"
     options.compilerArgs.add("--add-exports")
     options.compilerArgs.add("java.base/jdk.internal.misc=ALL-UNNAMED")
 }
